tests/bad/external-type-string.pas
program external_type_string;

procedure puts(s: string); external;

var x;
begin
    x := 1;
    puts(x)
end.
